# jdm-C

./: .gitignore  CMakeLists.txt  main.cpp
gameMaster/: GameMaster.cpp  GameMaster.h
gameTypes/coin/: Coin.cpp  Coin.h
gameTypes/dice/: Dice.cpp  Dice.h
gameTypes/gameCard/: GameCard.cpp  GameCard.h
interfaces/: RollingInterface.cpp  RollingInterface.h
tools/cardsAdapter/: CardsAdapter.cpp  CardsAdapter.h
tools/logger/: Logger.cpp  Logger.h
tools/randomGenerator/: RandomGenerator.cpp  RandomGenerator.h
tryYourLuck/: TryYourLuck.cpp  TryYourLuck.h
